# shadowsocks-android

./: .gitignore  .gitmodules  .headache.cfg  .jvmopts  .travis-setup.sh  .travis.yml  AUTHORS  AndroidManifest.xml  CONTRIBUTING.md  FAQ.md  LICENSE  Mohandes  README.md  aeo_android.keystore  build-ndk.sh  build.gradle  build.gradle.kts  build.sbt  build.sh  com.mysql.jdbc.exceptions.jdbc4.CommunicationsExce  deploy  detekt.yml  google-services.json  gradle.properties  launcher.sh  local.properties  local.properties.example  local.properties.travis  local.sbt.example  newfile  pom.xml  privacy_policy.md  release.sh  repositories.gradle.kts  settings.gradle  settings.gradle.kts  shadow.ai  sonatype.sbt  translate.py  travis.keystore  (+2 more)
app/src/main/jni/iptables/: Android.mk  COMMIT_NOTES  Makefile.am  autogen.sh
app/src/main/jni/iptables/extensions/: libip6t_ah.c  libip6t_dst.c  libip6t_frag.man  libip6t_hbh.c  libip6t_hl.man  libip6t_ipv6header.c  libip6t_ipv6header.man  libip6t_mh.c  libipt_CLUSTERIP.c  libipt_MASQUERADE.c  libipt_MIRROR.c  libipt_MIRROR.man  libipt_REDIRECT.c  libipt_ULOG.man  libipt_addrtype.man  libipt_ah.c  libipt_icmp.man  libipt_realm.man  libxt_CHECKSUM.c  libxt_CONNSECMARK.man  libxt_CT.man  libxt_IDLETIMER.c  libxt_IDLETIMER.man  libxt_NFLOG.c  libxt_NOTRACK.c  libxt_NOTRACK.man  libxt_SECMARK.man  libxt_TCPOPTSTRIP.man  libxt_TEE.man  libxt_TPROXY.man  libxt_TRACE.c  libxt_cluster.c  libxt_comment.c  libxt_comment.man  libxt_connlimit.man  libxt_devgroup.c  libxt_dscp.man  libxt_hashlimit.man  libxt_ipvs.man  libxt_limit.c  (+13 more)
app/src/main/jni/iptables/include/: Makefile.am  ip6tables.h
app/src/main/jni/iptables/iptables/: Android.mk  ip6tables-save.8  ip6tables-save.c  ip6tables.8.in  iptables-restore.c  iptables-save.c  iptables-xml.c  xtables.c
app/src/main/jni/iptables/libipq/: ipq_get_msgerr.3  ipq_set_verdict.3
app/src/main/jni/iptables/libiptc/: Android.mk  Makefile.am  libiptc.c
app/src/main/jni/iptables/tests/: options-ipv4.rules
app/src/main/jni/iptables/utils/: .gitignore
core/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  build-shared-executable.mk  jni-helper.cpp
core/src/main/jni/include/libev/: config.h
core/src/main/jni/include/shadowsocks-libev/: config.h
core/src/main/jni/include/sodium/: version.h
jni/badvpn/dhcpclient/: BDHCPClientCore.h  CMakeLists.txt  DHCPIpUdpDecoder.c  DHCPIpUdpEncoder.h
jni/badvpn/server/: CMakeLists.txt  server.c
jni/badvpn/tun2socks/: CMakeLists.txt
jni/iptables/iptables/: Makefile.am  ip6tables-multi.h  ip6tables-restore.8  ip6tables.c  iptables-apply  iptables-apply.8  iptables-multi.h  iptables-restore.8  iptables-save.8  iptables.8.in  iptables.c  iptables.xslt  xshared.c  xshared.h  xtables-multi.h  xtoptions.c
jni/iptables/libipq/: Makefile.am  ipq_create_handle.3  ipq_errstr.3  ipq_message_type.3  ipq_perror.3  ipq_read.3  ipq_set_mode.3  libipq.3
jni/libevent/include/: Makefile.am  Makefile.in
jni/libevent/include/event2/: buffer.h  buffer_compat.h  bufferevent_ssl.h  dns_struct.h  event-config.h  http.h  keyvalq_struct.h  rpc.h  rpc_compat.h  rpc_struct.h  tag.h  tag_compat.h  thread.h
jni/pdnsd/: COPYING.BSD  ChangeLog  INSTALL  Makefile.am  THANKS  TODO  aclocal.m4  cache.c  conf-parser.h  conff.c  conff.h  config.h  debug.h  dns.c  dns.h  error.h  icmp.h  main.c  netdev.c  pdnsd.spec.in  rr_types.h  servers.h
jni/pdnsd/contrib/: Makefile.am  Makefile.in
jni/pdnsd/doc/: Makefile.am  Makefile.in  pdnsd-ctl.8  pdnsd.conf.in
jni/pdnsd/doc/html/: dl.html.in  doc_makefile
jni/pdnsd/doc/txt/: doc_makefile
jni/pdnsd/pdnsd-ctl/: pdnsd-ctl.c
jni/pdnsd/rc/: Makefile  README
jni/pdnsd/rc/Debian/: Makefile  pdnsd
jni/pdnsd/rc/RedHat/: pdnsd  pdnsd.in
jni/pdnsd/rc/Slackware/: Makefile
jni/pdnsd/rc/SuSE/: pdnsd
jni/pdnsd/src/: consts.c  consts.h  debug.c  dns_query.h  helpers.c  ipvers.h  main.c  netdev.c  netdev.h  status.c  thread.c
jni/pdnsd/src/pdnsd-ctl/: Makefile.am
jni/pdnsd/src/rc/ArchLinux/: pdnsd.in
jni/pdnsd/src/rc/RedHat/: Makefile.in
jni/pdnsd/src/test/: Makefile.am  Makefile.in  if_up.c
jni/pdnsd/test/: Makefile  is_local_addr.c
src/main/jni/iptables/: INCOMPATIBILITIES  configure.ac
src/main/jni/iptables/extensions/: Android.mk  filter_init  libip6t_REJECT.c  libip6t_dst.man  libip6t_eui64.man  libip6t_hbh.man  libip6t_mh.man  libip6t_rt.c  libipt_NETMAP.man  libipt_SAME.c  libipt_SNAT.man  libipt_ULOG.c  libipt_ah.man  libipt_ecn.man  libipt_ttl.c  libipt_unclean.man  libxt_AUDIT.c  libxt_CLASSIFY.man  libxt_CONNSECMARK.c  libxt_LED.man  libxt_SECMARK.c  libxt_TEE.c  libxt_TPROXY.c  libxt_connbytes.c  libxt_conntrack.c  libxt_cpu.c  libxt_dccp.c  libxt_hashlimit.c  libxt_helper.c  libxt_iprange.c  libxt_mac.man  libxt_mark.c  libxt_multiport.c  libxt_rateest.c  libxt_sctp.c  libxt_socket.man  libxt_standard.c  libxt_tos.c  libxt_udp.c
src/main/jni/iptables/include/: iptables.h  xtables.h.in
src/main/jni/iptables/iptables/: .gitignore  Android.mk  ip6tables-restore.c  ip6tables-standalone.c  iptables-standalone.c  iptables-xml.1  xtables-multi.c  xtables.pc.in
src/main/jni/iptables/libipq/: ipq_destroy_handle.3  libipq.c
src/main/jni/iptables/libiptc/: .gitignore  libip6tc.c
src/main/jni/iptables/m4/: .gitignore
src/main/jni/iptables/utils/: nfnl_osf.c
src/main/jni/pdnsd/: AUTHORS  ChangeLog  ChangeLog.old  Makefile  Makefile.am  Makefile.in  NEWS  PKGBUILD.in  README  TODO  conff.c  config.h  config.h.in  configure.in  dns_answer.c  dns_query.c  file-list.base.in  freebsd_netinet_ip_icmp.h  helpers.h  icmp.c  ipvers.h  status.c  status.h  version
src/main/jni/pdnsd/contrib/: README  change_pdnsd_server_ip.pl  pdnsd_dhcp.pl
src/main/jni/pdnsd/doc/: doc_makefile  pdnsd.8.in
src/main/jni/pdnsd/doc/html/: dl.html  (+4 more)
src/main/jni/pdnsd/pdnsd-ctl/: Makefile
src/main/jni/pdnsd/src/: cache.c  cache.h  conf-keywords.h  conf-parser.c  conff.c  dns_query.c  error.c  hash.c  hash.h  helpers.h  list.c  list.h  make_rr_types_h.pl  pdnsd_assert.h  rr_types.c  rr_types.in  servers.c  sort_namevalues.pl  thread.h
(+2436 files in other folders)
